chore: add API helper, dev proxy and minimal express server for local backend

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start:api": "node server/index.js",
+    "install:api": "cd server && npm install",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
