--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "optimize:images": "node tools/optimize-images.js",
     "start:api": "node server/index.js",
     "install:api": "cd server && npm install",
     "lint": "eslint .",
