--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start:api": "node server/index.js",
     "install:api": "cd server && npm install",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "lucide-react": "^0.554.0",
